Fix modal overflow and close button

--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -24,8 +24,9 @@
     height: 70%;
     padding: 5% 5%;
     box-shadow: 0px 0px 30px -3px rgba(0,0,0,0.74);
-    max-height: 80%;
-    overflow: scroll;
+    max-height: 800px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .table-in-modal {
